# jankenstore

./: Cargo.toml  README.md  release.md
.github/workflows/: release.yml  verify.yml
src/: action.rs  add.rs  basics.rs  convert.rs  crud.rs  db_rep.rs  delete.rs  input_utils.rs  lib.rs  peer.rs  read.rs  rel.rs  schema.rs  shift.rs  sql.rs  update.rs  verify.rs
src/action/: commands.rs  create_op.rs  del_op.rs  mod.rs  modify_op.rs  payload.rs  peer_op.rs  read_op.rs  rel_op.rs  update_op.rs  utils.rs
src/bond/: create.rs  fetch.rs  mod.rs  relink.rs  wrap.rs
src/crud/: create.rs  del.rs  fetch.rs  mod.rs  shift.rs  sql.rs  total.rs  update.rs  verify.rs
src/sqlite/: add.rs  basics.rs  delete.rs  input_utils.rs  mod.rs  payload.rs  peer.rs  read.rs  schema.rs  shift.rs  sql.rs  update.rs
tests/: test_basic.rs  test_basic_reads.rs  test_basic_writes.rs  test_bonds.rs  test_create_or_update.rs  test_fetch_schema.rs  test_hard_delete.rs  test_input_errors_create.rs  test_input_errors_del.rs  test_input_errors_read.rs  test_input_errors_rel.rs  test_input_errors_update.rs  test_query_input_errors.rs  test_read.rs  testsest.rs
tests/helpers/: mod.rs
tests/snapshots/: test_basic_reads__search.snap  test_bonds__insert_with_nn_errors-2.snap  test_bonds__insert_with_nn_errors.snap  test_create_or_update__create_or_update_tbl_rep.snap  test_create_or_update__query_input_erros-2.snap  test_create_or_update__query_input_erros.snap  test_fetch_schema__fetch_schema_with_invalid_peer_table.snap  test_fetch_schema__fetch_schema_with_peer_tables_missing_link_columns.snap  (+78 more)
