[package]
name = "jankenstore"
version = "0.7.3"
edition = "2021"
authors = ["Martin Zheng <jszhengyq@gmail.com>"]
description = "Database operation helpers library"
readme = "README.md"
repository = "https://github.com/pandazy/jankenstore"
license = "MIT"
keywords = ["rust", "sqlite", "helpers", "database"]
categories = ["database"]

[dependencies]
anyhow = "1.0"
rusqlite = "0.33"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.42"
