[package]
name = "jankenstore"
version = "0.10.0"
edition = "2024"
authors = ["Martin Zheng <jszhengyq@gmail.com>"]
description = "Database operation helpers library"
readme = "README.md"
repository = "https://github.com/pandazy/jankenstore"
license = "MIT"
keywords = ["rust", "sqlite", "helpers", "database"]
categories = ["database"]

[dependencies]
anyhow = "1.0"
rusqlite = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.42"
